fix(build): Move to spotbugs 4.9.3